--- a/index.html
+++ b/index.html
@@ -51,9 +51,10 @@
     <!-- seciton about -->
     <section class="about" id="about">
         <div class="max-width">
+            <h2 class="title">About ....</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src="images/zac4.jpeg" alt="">
+                    <img src="images/me4.jpeg" alt="">
                 </div>
             </div>
         </div>
